# kal

./: .gitignore  LICENSE  README.md  dune-project  elvis.config  kal.opam  rebar.config
lib/: diet.ml  dune
src/: kal.app.src  kal.erl  kaltime.erl
test/: dune
